Created batch iterator

--- a/code.ipynb
+++ b/code.ipynb
@@ -36,39 +36,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "downloading en-ud-v2.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".data\\udpos\\en-ud-v2.zip: 100%|██████████| 688k/688k [00:00<00:00, 1.52MB/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "extracting\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".vector_cache\\glove.6B.zip: 862MB [10:35, 1.36MB/s]                               \n",
-      "100%|█████████▉| 399999/400000 [00:22<00:00, 17564.07it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "udpos = UDPOS()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Dataset Shape"
    ]
   },
   {
@@ -110,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +105,13 @@
     "example = vars(udpos.train.examples[0])\n",
     "print(\"Text\\n\", ' '.join(example['text']))\n",
     "print(\"UD Tags\\n\", example['udtags'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  2.2. Analyzing Vocabulary"
    ]
   },
   {
@@ -165,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +177,149 @@
     "\n",
     "for i, (token, count) in enumerate(udpos.TEXT.vocab.freqs.most_common(TOP)):\n",
     "    print(f\"{i+1:>2}) {token:<5} has count {count:>5}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check out how many distinct POS tags there are in `udtags`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 18 in total which are as follows\n",
+      " 1)   NOUN (34781)\n",
+      " 2)  PUNCT (23679)\n",
+      " 3)   VERB (23081)\n",
+      " 4)   PRON (18577)\n",
+      " 5)    ADP (17638)\n",
+      " 6)    DET (16285)\n",
+      " 7)  PROPN (12946)\n",
+      " 8)    ADJ (12477)\n",
+      " 9)    AUX (12343)\n",
+      "10)    ADV (10548)\n",
+      "11)  CCONJ (6707)\n",
+      "12)   PART (5567)\n",
+      "13)    NUM (3999)\n",
+      "14)  SCONJ (3843)\n",
+      "15)      X (847)\n",
+      "16)   INTJ (688)\n",
+      "17)    SYM (599)\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_pos_tags = len(udpos.UD_TAGS.vocab)\n",
+    "\n",
+    "print(f\"There are {unique_pos_tags} in total which are as follows\")\n",
+    "\n",
+    "for i, (tag, count) in enumerate(udpos.UD_TAGS.vocab.freqs.most_common()):\n",
+    "    print(f\"{i+1:>2}) {tag:>6} ({count})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Batch Iterator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our model will use vectorzied computation to be efficient. For that, we need to iterate over the dataset in batches. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_iter, val_iter, test_iter = udpos.get_iterators()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see what the iterator looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[torchtext.data.batch.Batch of size 64 from UDPOS]\n",
+      "\t[.text]:[torch.LongTensor of size 65x64]\n",
+      "\t[.udtags]:[torch.LongTensor of size 65x64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in train_iter:\n",
+    "    print(batch)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each batch has two fields, `text` and `udtags`. The shape of both the fields is $65 \\times 64$. Here's what this means:\n",
+    "\n",
+    "* **Number of steps**: 65. Meaning, there are 65 sequential tokens. \n",
+    "* **Batches**: 64. Meaning, there are 64 different sequences.\n",
+    "\n",
+    "Let's look at a breakdown of one row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: at weekend press conferences in salt lake city and phoenix , fbi and state officials said jeffs \" is considered armed and dangerous and may be traveling with armed <unk> . \" <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n",
+      "Tags: ADP NOUN NOUN NOUN ADP PROPN PROPN PROPN CCONJ PROPN PUNCT PROPN CCONJ NOUN NOUN VERB PROPN PUNCT AUX VERB ADJ CCONJ ADJ CCONJ AUX AUX VERB ADP ADJ NOUN PUNCT PUNCT <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in train_iter:\n",
+    "    text, tags = batch.text.T, batch.udtags.T\n",
+    "\n",
+    "    print(\"Text:\", \" \".join(udpos.TEXT.vocab.itos[i]\n",
+    "                            for i in text[0]))\n",
+    "    print(\"Tags:\", \" \".join(udpos.UD_TAGS.vocab.itos[i]\n",
+    "                            for i in tags[0]))\n",
+    "\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transposing the filed values, their shape becomes $64 \\times 65$. So each row is now one example sentence. Thus the sentence makes sense when we print it. In the LSTM model, we'll iterate over timesteps and look at a batch of examples."
    ]
   },
   {
