Created base module

--- a/code.ipynb
+++ b/code.ipynb
@@ -323,6 +323,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2: Model Creation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
