Created Bidirectional LSTM

--- a/code.ipynb
+++ b/code.ipynb
@@ -331,6 +331,241 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Projects\\POS_Tagging\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first specify some hyperparameter values. These will dictate the architectural constraints of our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EMBEDDING_DIM = 100\n",
+    "HIDDEN_DIM = 128\n",
+    "BATCH_SIZE = 64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Base LSTM Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module.lstm import LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lstm = LSTM(num_inputs=EMBEDDING_DIM, num_hiddens=HIDDEN_DIM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of parameters making up the LSTM model\n",
+      "W_xf  with shape torch.Size([100, 128])\n",
+      "W_hf  with shape torch.Size([128, 128])\n",
+      "b_f   with shape torch.Size([128])\n",
+      "W_xi  with shape torch.Size([100, 128])\n",
+      "W_hi  with shape torch.Size([128, 128])\n",
+      "b_i   with shape torch.Size([128])\n",
+      "W_xo  with shape torch.Size([100, 128])\n",
+      "W_ho  with shape torch.Size([128, 128])\n",
+      "b_o   with shape torch.Size([128])\n",
+      "W_xc  with shape torch.Size([100, 128])\n",
+      "W_hc  with shape torch.Size([128, 128])\n",
+      "b_c   with shape torch.Size([128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"List of parameters making up the LSTM model\")\n",
+    "\n",
+    "for name, params in lstm.named_parameters():\n",
+    "    print(f\"{name:<5} with shape {params.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_inputs = torch.randn((65, BATCH_SIZE, EMBEDDING_DIM))\n",
+    "outputs, (H, C) = lstm(dummy_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of outputs: 65\n",
+      "Shape of Hidden State: torch.Size([64, 128])\n",
+      "Shape of Memory Cell State: torch.Size([64, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of outputs:\", len(outputs))\n",
+    "print(\"Shape of Hidden State:\", H.shape)\n",
+    "print(\"Shape of Memory Cell State:\", C.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output dimensions match expected values. So our implementation is correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2. Bidirectional LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module.bi_lstm import BiLSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bi_lstm = BiLSTM(num_inputs=EMBEDDING_DIM, num_hiddens=HIDDEN_DIM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of parameters making up the LSTM model\n",
+      "forward_lstm.W_xf    with shape torch.Size([100, 128])\n",
+      "forward_lstm.W_hf    with shape torch.Size([128, 128])\n",
+      "forward_lstm.b_f     with shape torch.Size([128])\n",
+      "forward_lstm.W_xi    with shape torch.Size([100, 128])\n",
+      "forward_lstm.W_hi    with shape torch.Size([128, 128])\n",
+      "forward_lstm.b_i     with shape torch.Size([128])\n",
+      "forward_lstm.W_xo    with shape torch.Size([100, 128])\n",
+      "forward_lstm.W_ho    with shape torch.Size([128, 128])\n",
+      "forward_lstm.b_o     with shape torch.Size([128])\n",
+      "forward_lstm.W_xc    with shape torch.Size([100, 128])\n",
+      "forward_lstm.W_hc    with shape torch.Size([128, 128])\n",
+      "forward_lstm.b_c     with shape torch.Size([128])\n",
+      "backward_lstm.W_xf   with shape torch.Size([100, 128])\n",
+      "backward_lstm.W_hf   with shape torch.Size([128, 128])\n",
+      "backward_lstm.b_f    with shape torch.Size([128])\n",
+      "backward_lstm.W_xi   with shape torch.Size([100, 128])\n",
+      "backward_lstm.W_hi   with shape torch.Size([128, 128])\n",
+      "backward_lstm.b_i    with shape torch.Size([128])\n",
+      "backward_lstm.W_xo   with shape torch.Size([100, 128])\n",
+      "backward_lstm.W_ho   with shape torch.Size([128, 128])\n",
+      "backward_lstm.b_o    with shape torch.Size([128])\n",
+      "backward_lstm.W_xc   with shape torch.Size([100, 128])\n",
+      "backward_lstm.W_hc   with shape torch.Size([128, 128])\n",
+      "backward_lstm.b_c    with shape torch.Size([128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"List of parameters making up the LSTM model\")\n",
+    "\n",
+    "for name, params in bi_lstm.named_parameters():\n",
+    "    print(f\"{name:<20} with shape {params.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_inputs = torch.randn((65, BATCH_SIZE, EMBEDDING_DIM))\n",
+    "outputs, (f_h, b_h) = bi_lstm(dummy_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of outputs: 65\n",
+      "Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Shape of backward Hidden State: torch.Size([64, 128])\n",
+      "Shape of backward Memory Cell: torch.Size([64, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of outputs:\", len(outputs))\n",
+    "print(\"Shape of Forward Hidden State:\", f_h[0].shape)\n",
+    "print(\"Shape of Forward Memory Cell:\", f_h[1].shape)\n",
+    "print(\"Shape of backward Hidden State:\", b_h[0].shape)\n",
+    "print(\"Shape of backward Memory Cell:\", b_h[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
