Created deep LSTM

--- a/code.ipynb
+++ b/code.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,8 +266,8 @@
      "text": [
       "\n",
       "[torchtext.data.batch.Batch of size 64 from UDPOS]\n",
-      "\t[.text]:[torch.LongTensor of size 65x64]\n",
-      "\t[.udtags]:[torch.LongTensor of size 65x64]\n"
+      "\t[.text]:[torch.LongTensor of size 91x64]\n",
+      "\t[.udtags]:[torch.LongTensor of size 91x64]\n"
      ]
     }
    ],
@@ -291,15 +291,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: at weekend press conferences in salt lake city and phoenix , fbi and state officials said jeffs \" is considered armed and dangerous and may be traveling with armed <unk> . \" <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n",
-      "Tags: ADP NOUN NOUN NOUN ADP PROPN PROPN PROPN CCONJ PROPN PUNCT PROPN CCONJ NOUN NOUN VERB PROPN PUNCT AUX VERB ADJ CCONJ ADJ CCONJ AUX AUX VERB ADP ADJ NOUN PUNCT PUNCT <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n"
+      "Text: if anyone has any questions or concerns about the timing of these payments , please give me a call . <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n",
+      "Tags: SCONJ PRON VERB DET NOUN CCONJ NOUN ADP DET NOUN ADP DET NOUN PUNCT INTJ VERB PRON DET NOUN PUNCT <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n"
      ]
     }
    ],
@@ -331,18 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Projects\\POS_Tagging\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch"
    ]
@@ -356,13 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "EMBEDDING_DIM = 100\n",
     "HIDDEN_DIM = 128\n",
-    "BATCH_SIZE = 64"
+    "BATCH_SIZE = 64\n",
+    "NUM_LAYERS = 2"
    ]
   },
   {
@@ -374,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -531,24 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_inputs = torch.randn((65, BATCH_SIZE, EMBEDDING_DIM))\n",
     "outputs, (f_h, b_h) = bi_lstm(dummy_inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of outputs: 65\n",
+      "Outputs shape: 65\n",
       "Shape of Forward Hidden State: torch.Size([64, 128])\n",
       "Shape of Forward Memory Cell: torch.Size([64, 128])\n",
       "Shape of backward Hidden State: torch.Size([64, 128])\n",
@@ -557,11 +548,307 @@
     }
    ],
    "source": [
-    "print(\"Number of outputs:\", len(outputs))\n",
+    "print(\"Outputs shape:\", len(outputs))\n",
     "print(\"Shape of Forward Hidden State:\", f_h[0].shape)\n",
     "print(\"Shape of Forward Memory Cell:\", f_h[1].shape)\n",
     "print(\"Shape of backward Hidden State:\", b_h[0].shape)\n",
     "print(\"Shape of backward Memory Cell:\", b_h[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output, hidden state, and memory cell shapes are as expected. So the implementation is correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Deep LSTMs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module.deep_lstm import DeepLSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deep_lstm = DeepLSTM(num_inputs=EMBEDDING_DIM,\n",
+    "                     num_hiddens=HIDDEN_DIM,\n",
+    "                     num_layers=NUM_LAYERS,\n",
+    "                     bidirectional=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of parameters making up the LSTM model\n",
+      "layers.0.W_xf        with shape torch.Size([100, 128])\n",
+      "layers.0.W_hf        with shape torch.Size([128, 128])\n",
+      "layers.0.b_f         with shape torch.Size([128])\n",
+      "layers.0.W_xi        with shape torch.Size([100, 128])\n",
+      "layers.0.W_hi        with shape torch.Size([128, 128])\n",
+      "layers.0.b_i         with shape torch.Size([128])\n",
+      "layers.0.W_xo        with shape torch.Size([100, 128])\n",
+      "layers.0.W_ho        with shape torch.Size([128, 128])\n",
+      "layers.0.b_o         with shape torch.Size([128])\n",
+      "layers.0.W_xc        with shape torch.Size([100, 128])\n",
+      "layers.0.W_hc        with shape torch.Size([128, 128])\n",
+      "layers.0.b_c         with shape torch.Size([128])\n",
+      "layers.1.W_xf        with shape torch.Size([128, 128])\n",
+      "layers.1.W_hf        with shape torch.Size([128, 128])\n",
+      "layers.1.b_f         with shape torch.Size([128])\n",
+      "layers.1.W_xi        with shape torch.Size([128, 128])\n",
+      "layers.1.W_hi        with shape torch.Size([128, 128])\n",
+      "layers.1.b_i         with shape torch.Size([128])\n",
+      "layers.1.W_xo        with shape torch.Size([128, 128])\n",
+      "layers.1.W_ho        with shape torch.Size([128, 128])\n",
+      "layers.1.b_o         with shape torch.Size([128])\n",
+      "layers.1.W_xc        with shape torch.Size([128, 128])\n",
+      "layers.1.W_hc        with shape torch.Size([128, 128])\n",
+      "layers.1.b_c         with shape torch.Size([128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"List of parameters making up the LSTM model\")\n",
+    "\n",
+    "for name, params in deep_lstm.named_parameters():\n",
+    "    print(f\"{name:<20} with shape {params.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs, Hs = deep_lstm(dummy_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output shape: torch.Size([65, 64, 128])\n",
+      "Layer 1: Shape of Hidden State: torch.Size([64, 128])\n",
+      "Layer 1: Shape of Memory Cell: torch.Size([64, 128])\n",
+      "Layer 2: Shape of Hidden State: torch.Size([64, 128])\n",
+      "Layer 2: Shape of Memory Cell: torch.Size([64, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Output shape:\", outputs.shape)\n",
+    "\n",
+    "for i, h in enumerate(Hs):\n",
+    "    print(f\"Layer {i+1}: Shape of Hidden State:\", h[0].shape)\n",
+    "    print(f\"Layer {i+1}: Shape of Memory Cell:\", h[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4. Deep Bidrectional LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deep_lstm = DeepLSTM(num_inputs=EMBEDDING_DIM,\n",
+    "                     num_hiddens=HIDDEN_DIM,\n",
+    "                     num_layers=NUM_LAYERS,\n",
+    "                     bidirectional=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of parameters making up the LSTM model\n",
+      "layers.0.forward_lstm.W_xf with shape torch.Size([100, 128])\n",
+      "layers.0.forward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.0.forward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.0.forward_lstm.W_xi with shape torch.Size([100, 128])\n",
+      "layers.0.forward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.0.forward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.0.forward_lstm.W_xo with shape torch.Size([100, 128])\n",
+      "layers.0.forward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.0.forward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.0.forward_lstm.W_xc with shape torch.Size([100, 128])\n",
+      "layers.0.forward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.0.forward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.0.backward_lstm.W_xf with shape torch.Size([100, 128])\n",
+      "layers.0.backward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.0.backward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.0.backward_lstm.W_xi with shape torch.Size([100, 128])\n",
+      "layers.0.backward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.0.backward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.0.backward_lstm.W_xo with shape torch.Size([100, 128])\n",
+      "layers.0.backward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.0.backward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.0.backward_lstm.W_xc with shape torch.Size([100, 128])\n",
+      "layers.0.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.0.backward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.1.forward_lstm.W_xf with shape torch.Size([256, 128])\n",
+      "layers.1.forward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.1.forward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.1.forward_lstm.W_xi with shape torch.Size([256, 128])\n",
+      "layers.1.forward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.1.forward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.1.forward_lstm.W_xo with shape torch.Size([256, 128])\n",
+      "layers.1.forward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.1.forward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.1.forward_lstm.W_xc with shape torch.Size([256, 128])\n",
+      "layers.1.forward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.1.forward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.1.backward_lstm.W_xf with shape torch.Size([256, 128])\n",
+      "layers.1.backward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.1.backward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.1.backward_lstm.W_xi with shape torch.Size([256, 128])\n",
+      "layers.1.backward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.1.backward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.1.backward_lstm.W_xo with shape torch.Size([256, 128])\n",
+      "layers.1.backward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.1.backward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.1.backward_lstm.W_xc with shape torch.Size([256, 128])\n",
+      "layers.1.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.1.backward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.2.forward_lstm.W_xf with shape torch.Size([256, 128])\n",
+      "layers.2.forward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.2.forward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.2.forward_lstm.W_xi with shape torch.Size([256, 128])\n",
+      "layers.2.forward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.2.forward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.2.forward_lstm.W_xo with shape torch.Size([256, 128])\n",
+      "layers.2.forward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.2.forward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.2.forward_lstm.W_xc with shape torch.Size([256, 128])\n",
+      "layers.2.forward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.2.forward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.2.backward_lstm.W_xf with shape torch.Size([256, 128])\n",
+      "layers.2.backward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.2.backward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.2.backward_lstm.W_xi with shape torch.Size([256, 128])\n",
+      "layers.2.backward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.2.backward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.2.backward_lstm.W_xo with shape torch.Size([256, 128])\n",
+      "layers.2.backward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.2.backward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.2.backward_lstm.W_xc with shape torch.Size([256, 128])\n",
+      "layers.2.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.2.backward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.3.forward_lstm.W_xf with shape torch.Size([256, 128])\n",
+      "layers.3.forward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.3.forward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.3.forward_lstm.W_xi with shape torch.Size([256, 128])\n",
+      "layers.3.forward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.3.forward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.3.forward_lstm.W_xo with shape torch.Size([256, 128])\n",
+      "layers.3.forward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.3.forward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.3.forward_lstm.W_xc with shape torch.Size([256, 128])\n",
+      "layers.3.forward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.3.forward_lstm.b_c with shape torch.Size([128])\n",
+      "layers.3.backward_lstm.W_xf with shape torch.Size([256, 128])\n",
+      "layers.3.backward_lstm.W_hf with shape torch.Size([128, 128])\n",
+      "layers.3.backward_lstm.b_f with shape torch.Size([128])\n",
+      "layers.3.backward_lstm.W_xi with shape torch.Size([256, 128])\n",
+      "layers.3.backward_lstm.W_hi with shape torch.Size([128, 128])\n",
+      "layers.3.backward_lstm.b_i with shape torch.Size([128])\n",
+      "layers.3.backward_lstm.W_xo with shape torch.Size([256, 128])\n",
+      "layers.3.backward_lstm.W_ho with shape torch.Size([128, 128])\n",
+      "layers.3.backward_lstm.b_o with shape torch.Size([128])\n",
+      "layers.3.backward_lstm.W_xc with shape torch.Size([256, 128])\n",
+      "layers.3.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
+      "layers.3.backward_lstm.b_c with shape torch.Size([128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"List of parameters making up the LSTM model\")\n",
+    "\n",
+    "for name, params in deep_lstm.named_parameters():\n",
+    "    print(f\"{name:<20} with shape {params.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs, Hs = deep_lstm(dummy_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output shape: torch.Size([65, 64, 256])\n",
+      "Layer 1: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 1: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 1: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 1: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 2: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 2: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 2: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 2: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 3: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 3: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 3: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 3: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 4: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 4: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
+      "Layer 4: Shape of Forward Hidden State: torch.Size([64, 128])\n",
+      "Layer 4: Shape of Forward Memory Cell: torch.Size([64, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Output shape:\", outputs.shape)\n",
+    "\n",
+    "for i, h in enumerate(Hs):\n",
+    "    print(f\"Layer {i+1}: Shape of Forward Hidden State:\", h[0][0].shape)\n",
+    "    print(f\"Layer {i+1}: Shape of Forward Memory Cell:\", h[0][1].shape)\n",
+    "    print(f\"Layer {i+1}: Shape of Forward Hidden State:\", h[1][0].shape)\n",
+    "    print(f\"Layer {i+1}: Shape of Forward Memory Cell:\", h[1][1].shape)"
    ]
   },
   {
